--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
           content="width = device-width, initial-scale = 1, minimum-scale = 1, maximum-scale = 1, user-scalable = no"/>
 
     <script type="text/javascript" src="js/cgscenegraph_1.4.2.min.js"></script>
+    <script type="text/javascript" src="js/astar-min.js"></script>
 
     <script type="text/javascript" src="js/globals.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.live.js"></script>
@@ -30,7 +31,7 @@
 
 <body style="margin:0px">
 
-<canvas id="scene" width="480" height="320">
+<canvas id="scene" width="640" height="320">
     Your browser does not support the canvas element.
 </canvas>
 
