add placement of towers

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/astar-min.js"></script>
 
     <script type="text/javascript" src="js/globals.js"></script>
+    <script type="text/javascript" src="js/sprites/sprite.Cell.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.live.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.sun.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.stars.js"></script>
