--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,10 @@
     <script type="text/javascript" src="js/sprites/sprite.flower.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.cloud.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.bee.js"></script>
+    <script type="text/javascript" src="js/sprites/sprite.tower.js"></script>
+    <script type="text/javascript" src="js/sprites/sprite.startPoint.js"></script>
+    <script type="text/javascript" src="js/sprites/sprite.wall.js"></script>
+    <script type="text/javascript" src="js/sprites/sprite.newButton.js"></script>
     <script type="text/javascript" src="js/node.livePanel.js"></script>
     <script type="text/javascript" src="js/node.scorePanel.js"></script>
     <script type="text/javascript" src="js/states/state.about.js"></script>
