--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="js/sprites/sprite.Button.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.flower.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.cloud.js"></script>
-    <script type="text/javascript" src="js/sprites/sprite.bee.js"></script>
+    <script type="text/javascript" src="js/sprites/sprite.attacker.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.tower.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.startPoint.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.wall.js"></script>
