--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="js/sprites/sprite.flower.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.cloud.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.attacker.js"></script>
+    <script type="text/javascript" src="js/sprites/sprite.towerNode.js"></script>
     <script type="text/javascript" src="js/node.livePanel.js"></script>
     <script type="text/javascript" src="js/node.scorePanel.js"></script>
     <script type="text/javascript" src="js/states/state.about.js"></script>
