--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="js/sprites/sprite.cloud.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.attacker.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.towerNode.js"></script>
-    <script type="text/javascript" src="js/sprites/sprite.tower.js"></script>
+    <script type="text/javascript" src="js/sprites/sprite.endpoint.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.startPoint.js"></script>
     <script type="text/javascript" src="js/sprites/sprite.wall.js"></script>
     <script type="text/javascript" src="js/node.livePanel.js"></script>
